Fixed title name with buttons and top bar sizes on mobiles

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -252,6 +252,7 @@ html, body {
 			font-weight: bold;
 			font-size: 18px;
 			margin: 0;
+			margin-right: 20px;
 			color: #797979;
 		}
 	}
